Fixed the double scrollbar issue.

--- a/sass/scss/_general.scss
+++ b/sass/scss/_general.scss
@@ -105,7 +105,6 @@ div.important
   border-color : rgba(0, 0, 0, 1);
   border-width : 1px;
   background-color: rgba(0, 0, 0, 0.5);
-  margin-bottom: 10px;
   padding-left: 5px;
   padding-right: 4px;
 }
