--- a/static/css/style.css
+++ b/static/css/style.css
@@ -82,7 +82,6 @@ div.important {
   border-color: black;
   border-width: 1px;
   background-color: rgba(0, 0, 0, 0.5);
-  margin-bottom: 10px;
   padding-left: 5px;
   padding-right: 4px; }
 
